Prevent double scrollbars

--- a/web/css/layout/_minicart.less
+++ b/web/css/layout/_minicart.less
@@ -137,6 +137,7 @@
     .minicart-items-wrapper {
         position: relative;
         height: auto !important;
+        max-height: none !important;
         margin: @4 0;
         > .minicart-items {
             &:extend(.breeze-scrollbar all);
